style.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

* {
  padding: 0;
  margin: 0;
  font-family: 'Inter', sans-serif;
}

body {
  overflow-x: hidden;
}

.navbar ul {
  display: none;
}

.about {
  background-image: url(./images/mobileImages/header-illsutration-mobile.svg);
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 5vw;
  gap: 2rem;
}

.about h1 {
  color: #172b4d;
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 1.2;
  text-align: center;
  max-width: 20rem;
}

.about h1 span {
  color: #36b37e;
}

.about p {
  color: #172b4d;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.6;
  text-align: center;
  max-width: 30rem;
}

.about ul,
.social-connect {
  display: flex;
  align-items: center;
  list-style-type: none;
  gap: 1rem;
}

.projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4rem;
}

.projectContainer {
  display: grid;
  grid-template-columns: 1fr;
  gap: 4rem;
}

.projects h3 {
  font-weight: 700;
  font-size: 2.5rem;
  line-height: 1.2;
  max-width: 20rem;
  text-align: center;
  color: #172b4d;
  position: relative;
  margin-top: 3rem;
}

.projects h3::after {
  position: absolute;
  content: '';
  background-color: #36b37e;
  bottom: -0.75rem;
  left: 50%;
  width: 4rem;
  height: 1px;
  transform: translateX(-50%);
}

.card {
  display: flex;
  flex-direction: column;
  padding: 5px;
  border: 2px solid #d0d9d4;
  border-radius: 5px;
}

.card img {
  height: 19.375rem; /* 310px */
  width: 100%;
  object-fit: cover;
}

.cardDetails {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-top: 1rem;
  align-items: center;
}

.cardDetails p {
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.33;
  text-align: center;
}

.cardDetails ul,
.skills {
  display: flex;
  list-style-type: none;
  gap: 1rem;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  max-width: 20rem;
  flex-basis: 100%;
}

.skills li {
  color: #36b37e;
  background-color: #fff;
  padding: 0.75rem 0.625rem;
  font-size: 0.75rem;
  line-height: 1.33;
  letter-spacing: 0.03em;
  font-weight: 600;
}

.cardDetails ul li {
  background-color: #ebf0ee;
  padding: 0.75rem 0.625rem;
  color: #3a4a42;
  font-size: 0.75rem;
  line-height: 1.33;
  letter-spacing: 0.03em;
  font-weight: 600;
}

.cardDetails button {
  color: #fff;
  background-color: #36b37f;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.38;
  padding: 0.75rem;
  width: 150px;
  border: none;
  border-radius: 5px;
  margin-bottom: 2rem;
}

.about-skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 6rem 1rem 2rem 1rem;
  background-image: url('./images/mobileImages/aboutbackground.svg');
  background-repeat: no-repeat;
  background-position: right 5vw;
}

.about-details {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

.about-details h3 {
  color: #172b4d;
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 1.2;
  text-align: center;
}

.about-details p,
.contact p {
  color: #172b4d;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.6;
  text-align: center;
}

.about-details button {
  padding: 0.75rem 0.625rem;
  color: #fff;
  background-color: #36b37e;
  border: none;
  border-radius: 5px;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.38;
}

.skills-container {
  display: flex;
  flex-direction: column;
  margin-top: 4rem;
  gap: 1rem;
}

.tech-skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding: 3rem 1rem;
  background-color: #ebf0ee;
  border: none;
  border-radius: 5px;
}

.tech-skills img {
  background-color: #fff;
  padding: 0.625rem;
  border-radius: 100%;
}

.tech-skills p {
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.33;
  text-align: center;
}

.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding: 2rem;
  background-image: url('./images/mobileImages/contackbackground.svg');
  background-repeat: no-repeat;
  background-position: right calc(100% - 12vw);
}

.contact h3 {
  text-align: center;
  font-weight: 700;
  font-size: 2.5rem;
  line-height: 1.2;
}

.contact form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 90%;
}

.contact form input {
  padding: 0.4375rem;
  color: #d0d9d4;
  border: 1px solid #d0d9d4;
}

.contact form textarea {
  padding: 0.4375rem;
  border: 1px solid #d0d9d4;
}

.contact form button {
  color: #fff;
  background-color: #36b37f;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.38;
  padding: 0.75rem;
  width: 150px;
  border: none;
  border-radius: 5px;
  margin: 0 auto;
}

.cardDetails button:hover,
.about-details button:hover {
  box-shadow: 0 0.5rem 1rem rgba(54, 179, 127, 0.24);
}

.about-details button:active,
.cardDetails button:active,
.contact form button:active {
  background-color: #008552;
}

.contact form button:hover {
  box-shadow: 0 0.5rem 1rem rgba(54, 179, 127, 0.24);
}

.footer {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  padding-bottom: 1rem;
}

.footer hr {
  display: none;
}

@media screen and (min-width: 768px) {
  .navbar ul {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    padding: 1rem;
  }

  .navbar ul li a {
    text-decoration: none;
    color: #172b4d;
    font-weight: 600;
  }

  .about {
    position: relative;
    background-image: url(./images/desktopImages/Header-llustration-desktop.svg);
    height: 100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center;
  }

  .about h1 {
    max-width: 35rem;
  }

  .about p {
    max-width: 37rem;
  }

  .projects h3 {
    max-width: none;
  }

  .projectContainer {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
    gap: 1rem;
    padding: 1rem;
  }

  .card {
    max-width: 369px;
    max-height: 474px;
    position: relative;
    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
  }

  .cardDetails {
    gap: 1rem;
  }

  .cardDetails button {
    position: relative;
    margin: 0;
    bottom: -25px;
  }

  .about-details p,
  .contact p {
    max-width: 920px;
  }

  .skills-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }

  .tech-skills {
    max-width: 369px;
    max-height: 316px;
    padding: 2rem 1rem;
  }

  .about-skills {
    background-image: url(./images/desktopImages/aboutdesktopfirst.svg);
    background-repeat: no-repeat;
    background-position: right 5vw;
  }

  .skills {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
    max-width: none;
  }

  .contact p {
    display: none;
  }

  .contact {
    display: flex;
    flex-direction: row;
    background-image: url(./images/desktopImages/contactfirst.svg);
    background-repeat: no-repeat;
    background-position: right calc(100% + 4vw);
    align-items: center;
    justify-content: center;
  }

  .contact h3 {
    max-width: 463px;
    max-height: 256px;
    font-size: 30px;
  }

  .contact form {
    width: 50%;
  }

  .footer {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    align-items: center;
    padding-bottom: 1rem;
  }

  .footer hr {
    display: block;
    width: 100%;
    height: 1px;
    background-color: #d0d9d4;
    border: none;
  }
}

